[gd_scene load_steps=4 format=3 uid="uid://be833cwtu3e0m"]

[ext_resource type="Script" path="res://Menus/Settings/control_remapper.gd" id="1_d70i0"]
[ext_resource type="Theme" uid="uid://cvjimjlqhiq6t" path="res://Common/Themes/button.tres" id="2_drn1v"]

[sub_resource type="LabelSettings" id="LabelSettings_acswc"]
font_size = 24

[node name="ControlRemapper" type="HBoxContainer" groups=["Control Remappers"]]
offset_right = 317.0
offset_bottom = 25.0
script = ExtResource("1_d70i0")

[node name="ControlLabel" type="Label" parent="."]
custom_minimum_size = Vector2(250, 37)
layout_mode = 2
text = "CONTROL NAME"
label_settings = SubResource("LabelSettings_acswc")
vertical_alignment = 1

[node name="ControlRemapButton" type="Button" parent="."]
custom_minimum_size = Vector2(250, 37)
layout_mode = 2
theme = ExtResource("2_drn1v")
toggle_mode = true
text = "PRESS ANY KEY..."
icon_alignment = 1

[connection signal="toggled" from="ControlRemapButton" to="." method="_on_control_remap_button_toggled"]
